--- a/airflow/www/static/css/material-icons.css
+++ b/airflow/www/static/css/material-icons.css
@@ -70,7 +70,9 @@
   font-size: 48px;
 }
 
-.dropdown-menu > li > a > .material-icons {
+.dropdown-menu > li > a > .material-icons,
+.dropdown-menu > li > form > button > .material-icons
+{
   margin-right: 6px;
 }
 
